# SPL-01

./: CMakeLists.txt  CSVData.cpp  CSVData.h  CSVReader.cpp  CSVReader.h  CoordinateCalc.cpp  CoordinateCalc.h  DirectoryReader.h  Gradient.cpp  Gradient.h  GradientDescent.cpp  GradientDescent.h  Image.h  MatrixManiPulator.cpp  MatrixManiPulator.h  MatrixManipulator.cpp  MatrixManipulator.h  SVD.cpp  SVD.h  Stacker.cpp  Stacker.h  ThreadStacker.cpp  ThreadStacker.h  crossValidation.cpp  crossValidation.h  directoryReader.cpp  directoryReader.h  image.cpp  image.h  imageFinder.cpp  imageFinder.h  main.cpp  projectMenu.cpp
